--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
         </div>
       </form>
       <ul id="results" class="list-group list-group-horizontal"></ul>
+      <div class="row">
+        <div class="col pt-1">
+          <button
+            class="btn btn-primary btn-lg"
+            data-controller="disable-button"
+            data-action="click->disable-button#disable">
+            Click me!
+          </button>
+        </div>
+      </div>
     </div>
 
     <script src="main.js"></script>
