added the reset function for the reset link

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           </button>
           <a href="#" class="d-none ms-2"
           data-disable-button-target="link"
+          data-action="click->disable-button#reset"
           >Reset</a>
         </div>
       </div>
