--- a/index.html
+++ b/index.html
@@ -8,16 +8,30 @@
       <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container text-center">
-      <form class="row g-2 justify-content-center py-5" id="search-form">
+    <div class="container text-center" data-controller="movies">
+      <form
+        class="row g-2 justify-content-center py-5"
+        id="search-form"
+        data-action="submit->movies#search"
+      >
         <div class="col-4">
-          <input type="text" class="form-control" placeholder="Find movie" id="search-input">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Find movie"
+            id="search-input"
+            data-movies-target="input"
+          >
         </div>
         <div class="col-1">
           <input type="submit" class="btn btn-primary">
         </div>
       </form>
-      <ul id="results" class="list-group list-group-horizontal"></ul>
+      <ul
+        id="results"
+        class="list-group list-group-horizontal"
+        data-movies-target="results"
+      ></ul>
       <div class="row">
         <div class="col pt-1" data-controller="disable-button">
           <button
