--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         id="results"
         class="list-group list-group-horizontal"
         data-movies-target="results"
+        data-controller="sortable"
       ></ul>
       <div class="row">
         <div class="col pt-1" data-controller="disable-button">
